# BasicStructureUI

./: .gitignore  LICENSE  README.md  fix_manifest_paths.py  pyproject.toml  rename_audio_files.py  requirements-for-mac.txt  requirements.txt
configs/: _base.yaml  ipa_word_30_training.yaml  mfcc_word_30_training.yaml  simple_cnn_training.yaml  wav2vec2_ko.yaml  whisper_tiny_ko.yaml  word_30_training.yaml  word_training.yaml
data/: word_vocabulary.txt
scripts/: create_correct_manifest.py  create_pronunciation_manifest.py  debug_model.py  evaluate.py  infer.py  make_manifest.py  test_speech_recognition.py  train.py  train_30_words.py  train_ipa_30_words.py  train_mfcc_30_words.py  train_simple_cnn.py  train_word.py  validate_training_data.py
src/align/: errors.py  forced_align.py
src/data/: dataset.py  ipa_dataset.py  prepare_data.py  pronunciation_dataset.py  word_dataset.py
src/engines/: base_engine.py  ipa_engine.py  mfcc_engine.py  simple_cnn_engine.py  wav2vec2_engine.py  whisper_engine.py  word_engine.py
src/ipa/: g2p_ko.py  ipa_map.py  postrules.py  to_ipa.py
src/metrics/: asr_metrics.py  phoneme_metrics.py  word_tracking.py
src/utils/: io.py  mlflow_utils.py  seed.py
